# linux-whisper

./: .gitignore  Cargo.toml  README.md  com.linuxwhisper.LinuxWhisper.yml  justfile
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  pages.yml  release.yml
build-aux/: flatpak-cargo-generator.sh
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/src/services/: dictation.rs  mod.rs  transcription.rs
crates/app/src/ui/: about.rs  mod.rs  model_row.rs  preferences.rs  window.rs
crates/audio/: Cargo.toml
crates/audio/src/: capture.rs  decode.rs  lib.rs  resample.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  export.rs  format.rs  language.rs  lib.rs  model.rs  search.rs
crates/i18n/: Cargo.toml  i18n.toml
crates/i18n/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: engine.rs  model_manager.rs  model_registry.rs  worker.rs
crates/platform/: Cargo.toml
crates/platform/src/: clipboard.rs  display.rs  hotkey.rs  lib.rs  text_inject.rs  tray.rs
crates/whisper/: Cargo.toml
crates/whisper/src/: engine.rs  lib.rs  model_manager.rs  model_registry.rs  worker.rs
data/: com.linuxwhisper.LinuxWhisper.desktop  com.linuxwhisper.LinuxWhisper.gschema.xml  com.linuxwhisper.LinuxWhisper.metainfo.xml
data/tray-icons/hicolor/: index.theme
docs/: index.html
i18n/en-US/: main.ftl
i18n/es/: main.ftl
