[workspace]
members = [
    "crates/core",
    "crates/audio",
    "crates/whisper",
    "crates/platform",
    "crates/i18n",
    "crates/app",
]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.80"

[workspace.dependencies]
# Internal crates
linux-whisper-core = { path = "crates/core" }
linux-whisper-audio = { path = "crates/audio" }
linux-whisper-whisper = { path = "crates/whisper", default-features = false }
linux-whisper-platform = { path = "crates/platform" }
linux-whisper-i18n = { path = "crates/i18n" }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Error handling
thiserror = "2"

# Async
tokio = { version = "1", features = ["full"] }

# Testing
mockall = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
