[package]
name = "linux-whisper-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "linux-whisper"
path = "src/main.rs"

[features]
default = ["cuda"]
cuda = ["linux-whisper-whisper/cuda"]

[dependencies]
linux-whisper-core = { workspace = true }
linux-whisper-audio = { workspace = true }
linux-whisper-whisper = { workspace = true }
linux-whisper-platform = { workspace = true }
linux-whisper-i18n = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
gtk = { package = "gtk4", version = "0.9", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }

[dev-dependencies]
mockall = { workspace = true }
