[package]
name = "linux-whisper-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
