[package]
name = "linux-whisper-i18n"
version.workspace = true
edition.workspace = true

[dependencies]
i18n-embed = { version = "0.15", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.9"
rust-embed = "8"
once_cell = "1"
unic-langid = { version = "0.9", features = ["unic-langid-macros"] }
