[package]
name = "linux-whisper-llm"
version.workspace = true
edition.workspace = true

[features]
default = ["cuda"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dependencies]
linux-whisper-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.21"
reqwest = { version = "0.12", features = ["stream"] }
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
