[package]
name = "linux-whisper-platform"
version.workspace = true
edition.workspace = true

[dependencies]
linux-whisper-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
arboard = "3"
ksni = "0.3"
evdev = "0.13"
nix = { version = "0.29", features = ["poll"] }

[dev-dependencies]
mockall = { workspace = true }
