[package]
name = "linux-whisper-whisper"
version.workspace = true
edition.workspace = true

[dependencies]
linux-whisper-core = { workspace = true }
linux-whisper-audio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["stream"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
